--- a/Vladimir U. Ivanov.CV.tex
+++ b/Vladimir U. Ivanov.CV.tex
@@ -19,19 +19,18 @@
 \begin{rSection}{Education}
 
 {\bf edX online learning initiative of Harvard University and MIT} \hfill {\em March 2012 - June 2012} \\
-Completed course Circuits and Electronics 6.002x with grade A
+Course "Circuits and Electronics 6.002x" was completed with grade A.
 
-
-{\bf Far Eastern Federal Univercity (ex. FENU), Vadivostok} \hfill {\em August 2005 - July 2010} \\ 
-Expert. Engineer in Information Systems \& Technologies \\
-Defended degree work in under-water robotics area
+{\bf Far Eastern Federal Univercity (ex. FENU), Vadivostok} \hfill {\em August 2005 - June 2010} \\ 
+Expert. Information Systems \& Technologies Engineer. \\
+Degree work was defended in under-water robotics area.
 
 {\bf Secondary school 51 of Vladivostok} \hfill {\em September 2003  - June 2005}\\
-Complete medium education \\
-Granted Japanese language certifcate due passing final exam
+Complete medium education. \\
+Japanese Language certificate was obtained due passing final exam.
 
 {\bf Secondary school 51 of Vladivostok} \hfill {\em August 1995 - June 2003}\\
-Common education
+Common education.
 
 \end{rSection}
 
@@ -41,9 +40,14 @@ Common education
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Spider Pacific, Ltd.}{October 2010 - Present}{Embedded Systems Engineer}{Vladivostok, RU}
-\item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.
-\item Donec et mollis dolor. Praesent et diam eget libero Adobe Coldfusion egestas mattis sit amet vitae augue.
+\begin{rSubsection}{Spider Pacific, Ltd.}{October 2010 - present}{Embedded Systems Engineer}{Vladivostok, RUS}
+\item Mechanical-less joystick was designed as part of hardware-, software system. As element base was used accelerometer, gyroscope and 8-bit 
+microprocessor integrated circuits. Project was frozen at model stage by director.
+\item Valve tubes amplifier for PC sound cards was designed and manufactured. Complete circuit schematic was 
+used. Project is being at case designing stage.
+\item "Power over Ethernet" injector was designed and manufactured. Physical layer of IEEE 802.3af standart was 
+implemented (passive class B). Cisco Systems equipment is being used as a prototype. Implementation with entire 
+standart support is being at designing stage.
 \end{rSubsection}
 
 \end{rSection}
@@ -55,21 +59,23 @@ Common education
 \begin{rSection}{Technical Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-CAD & Sprint Layout, sPlan, Eagle \\
-Compilers / Tools & gcc, avr-gcc, gdb, make, avrdude \\
-Computer Algebra & Maxima \\
-Computer Networks & \\
-Computer Science & foundation of computer arhitecture, microprocessor systems and \\
-                 & security techniques \\
-Electronics & designing and routing both digital and analog circuits\\
-Hand-Skills & electrical equipment (multimeter, oscilloscope, logic analyzer), \\
-            & soldering (iron, airflow, microwave), lather \& milling work (Proxxon \\
-            & equipment, Germany), hardware programmers \\
-Operating Systems & Windows, GNU/Linux (Debian, Ubuntu as main working system, \\
-            & openSUSE, Fedora) \\
-Prog. Languages & assembler (x86, AVR), plain C, Wiring \\
-Text Processing / IDE & Sublime Text, Emacs, LaTeX, Eclipse, AVR Studio, CVAVR, regexps \\
-VCS / DVCS & svn, hg, git (github.com/voventus, bitbucket.com/voventus)
+CAD                 & Sprint Layout, sPlan, Eagle, Altium Designer \\
+Compilers/Tools     & gcc, avr-gcc, javac, gdb, make, avrdude, maxima \\
+Computer Networks   & OSI pattern, main network protocols, SOHO active communication \\
+                    & equipment, network mounting \\
+Computer Science    & foundation of computer architecture, microprocessor systems and \\
+                    & security techniques \\
+Electronics         & designing, routing and manufacturing both digital, analog and valve \\
+                    & tubes circuits, USB, UART/RS-232, 1-wire, SPI, I2C, CAN \\
+Hand-Skills         & electrical equipment (multimeter, oscilloscope, logic and spectrum \\
+                    & analyzers), soldering (iron, airflow, microwave), lather and milling \\
+                    & works (Proxxon equipment, Germany), hardware programmers \\
+Operating Systems   & Windows, GNU/Linux (Ubuntu as main working system, Debian, \\
+                    & openSUSE, Fedora), VirtualBox as base of virtualization \\
+Prog. Languages     & assembler (x86, AVR), plain C, Wiring, Bash \\
+Text Processing/IDE & Sublime Text (own syntax definition for AVR assembler), Emacs, \\
+                    & LaTeX, Eclipse, AVR Studio, CVAVR, regexps \\
+VCS/DVCS            & svn, mercurial, git (github.com/voventus, bitbucket.com/voventus)
 \end{tabular}
 
 \end{rSection}
@@ -84,7 +90,7 @@ VCS / DVCS & svn, hg, git (github.com/voventus, bitbucket.com/voventus)
 \item Hi-Tech and impacting one on human being, designing hardware and software
 \item Physics (two completed unvercity years), applied math, world economic
 \item Professional sports leagues of US (NHL, NFL, MLB), swimming (sports rank), cards games
-\item Foreign languages (English, Japanese, German), cooking, drawing, electronic music
+\item Foreign languages (English, Japanese, German, Russian - native), cooking, drawing, electronic music
 \end{itemize}
 
 \end{rSection}
