--- a/Vladimir U. Ivanov.CV.tex
+++ b/Vladimir U. Ivanov.CV.tex
@@ -41,8 +41,8 @@ Common education.
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{Spider Pacific, Ltd.}{October 2010 - present}{Embedded Systems Engineer}{Vladivostok, RUS}
-\item Mechanical-less joystick was designed as part of hardware-, software system. As element base was used accelerometer, gyroscope and 8-bit 
-microprocessor integrated circuits. Project was frozen at model stage by director.
+\item Mechanical-less manipulator was designed as part of hardware/software system. As element base was used 
+integrated circuits of Atmel, Freescale, Analog Devices and Murata companies. Project was frozen at model stage by director.
 \item Valve tubes amplifier for PC sound cards was designed and manufactured. Complete circuit schematic was 
 used. Project is being at case designing stage.
 \item "Power over Ethernet" injector was designed and manufactured. Physical layer of IEEE 802.3af standart was 
