Added some information about Rhonda

--- a/Vladimir U. Ivanov.CV.tex
+++ b/Vladimir U. Ivanov.CV.tex
@@ -7,7 +7,7 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Vladimir U. Ivanov}
-\address{tel.: 8$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \\ person@v-u-ivanov.ru}
+\address{tel.: +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \\ person@v-u-ivanov.ru \\ skype: v.u.ivanov}
 \address{Age: 24, man \\ birthplace: Vladivostok, Russia}
 
 \begin{document}
@@ -25,11 +25,11 @@ Course "Circuits and Electronics 6.002x" was completed with grade A.
 Expert. Information Systems \& Technologies Engineer. \\
 Degree work was defended in under-water robotics area.
 
-{\bf Secondary school 51 of Vladivostok} \hfill {\em September 2003  - June 2005}\\
+{\bf Secondary school 51 of Vladivostok} \hfill {\em September 2003  - June 2005} \\
 Complete medium education. \\
 Japanese Language certificate was obtained due passing final exam.
 
-{\bf Secondary school 51 of Vladivostok} \hfill {\em August 1995 - June 2003}\\
+{\bf Secondary school 51 of Vladivostok} \hfill {\em August 1995 - June 2003} \\
 Common education.
 
 \end{rSection}
@@ -40,7 +40,12 @@ Common education.
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Spider Pacific, Ltd.}{October 2010 - present}{Embedded Systems Engineer}{Vladivostok, RUS}
+\begin{rSubsection}{Rhonda, Ltd.}{October 2012 - present}{Embedded Software Developer}{Vladivostok, RUS}
+\item Member of CSR (ex. Zoran) project team. Embedded software designing for Digital Still Cameras based on Zoran
+COACH SoC.
+\end{rSubsection}
+
+\begin{rSubsection}{Spider Pacific, Ltd.}{October 2010 - October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
 \item Mechanical-less manipulator was designed as part of hardware/software system. As element base was used 
 integrated circuits of Atmel, Freescale, Analog Devices and Murata companies. Project was frozen at model stage by director.
 \item Valve tubes amplifier for PC sound cards was designed and manufactured. Complete circuit schematic was 
@@ -66,16 +71,18 @@ Computer Networks   & OSI pattern, main network protocols, SOHO active communica
 Computer Science    & foundation of computer architecture, microprocessor systems and \\
                     & security techniques \\
 Electronics         & designing, routing and manufacturing both digital, analog and valve \\
-                    & tubes circuits, USB, UART/RS-232, 1-wire, SPI, I2C, CAN \\
+                    & tubes circuits, USB, UART/RS-232, 1-wire, SPI, I2C, CAN, JTAG \\
 Hand-Skills         & electrical equipment (multimeter, oscilloscope, logic and spectrum \\
                     & analyzers), soldering (iron, airflow, microwave), lather and milling \\
                     & works (Proxxon equipment, Germany), hardware programmers \\
 Operating Systems   & Windows, GNU/Linux (Ubuntu as main working system, Debian, \\
                     & openSUSE, Fedora), VirtualBox as base of virtualization \\
 Prog. Languages     & assembler (x86, AVR), plain C, Wiring, Bash \\
+RTOS                & ThreadX, free-RTOS \\
 Text Processing/IDE & Sublime Text (own syntax definition for AVR assembler), Emacs, \\
                     & LaTeX, Eclipse, AVR Studio, CVAVR, regexps \\
-VCS/DVCS            & svn, mercurial, git (github.com/voventus, bitbucket.com/voventus)
+VCS/DVCS            & svn, perforce, mercurial, git \\ 
+                    & (github.com/voventus, bitbucket.com/voventus)
 \end{tabular}
 
 \end{rSection}
@@ -88,7 +95,7 @@ VCS/DVCS            & svn, mercurial, git (github.com/voventus, bitbucket.com/vo
 
 \begin{itemize}
 \item Hi-Tech and impacting one on human being, designing hardware and software
-\item Physics (two completed unvercity years), applied math, world economic
+\item Physics (two completed univercity years), applied math, world economic
 \item Professional sports leagues of US (NHL, NFL, MLB), swimming (sports rank), cards games
 \item Foreign languages (English, Japanese, German, Russian - native), cooking, drawing, electronic music
 \end{itemize}
