--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -6,9 +6,9 @@
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
-\name{Vladimir U. Ivanov}
+\name{Vladimir Ivanov}
 \address{tel.: +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \\ person@v-u-ivanov.ru \\ skype: v.u.ivanov}
-\address{Age: 24, man \\ birthplace: Vladivostok, Russia}
+\address{Age: 25, man \\ birthplace: Vladivostok, Russia}
 
 \begin{document}
 
@@ -23,11 +23,11 @@ Course "Circuits and Electronics 6.002x" was completed with grade A.
 
 {\bf Far Eastern Federal Univercity (ex. FENU), Vadivostok} \hfill {\em August 2005 - June 2010} \\ 
 Expert. Information Systems \& Technologies Engineer. \\
-Degree work was defended in under-water robotics area.
+Degree work was defended in the under-water robotics area.
 
 {\bf Secondary school 51 of Vladivostok} \hfill {\em September 2003  - June 2005} \\
 Complete medium education. \\
-Japanese Language certificate was obtained due passing final exam.
+Japanese Language certificate was obtained due to passing of the final exam.
 
 {\bf Secondary school 51 of Vladivostok} \hfill {\em August 1995 - June 2003} \\
 Common education.
@@ -35,14 +35,19 @@ Common education.
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-%   WORK EXPERIENCE SECTION
+%   EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Rhonda, Ltd.}{October 2012 - present}{Embedded Software Developer}{Vladivostok, RUS}
-\item Member of CSR (ex. Zoran) project team. Embedded software designing for Digital Still Cameras based on Zoran
-COACH SoC.
+\begin{rSubsection}{Rhonda Software, Ltd.}{October 2012 - present}{Embedded Software Engineer}{Vladivostok, RUS}
+\item Cambridge Silicon Radio (CSR) plc contractor.
+\item Distributed designing and supporting of the embedded software for the digital still cameras and mobile driver recorders based on the COACH system on a chip.
+\item Support offices are located in the USA, Israel, Taiwan, Japan, Korea, China.
+\item Team in the Russia consist of over than 80 members including developers and QA engineers.
+\item Main customers: Ability, Garmin, Nikon, Panasonic, Pentax, Samsung, Sony.
+\item Supported peripheral domain: optic sensors, file systems, displays, communication protocols, PC-side applied software.
+\item Improved processing performance of the user interface images for the customer projects.
 \end{rSubsection}
 
 \begin{rSubsection}{Spider Pacific, Ltd.}{October 2010 - October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
@@ -81,8 +86,7 @@ Prog. Languages     & assembler (x86, AVR), plain C, Wiring, Bash \\
 RTOS                & ThreadX, free-RTOS \\
 Text Processing/IDE & Sublime Text (own syntax definition for AVR assembler), Emacs, \\
                     & LaTeX, Eclipse, AVR Studio, CVAVR, regexps \\
-VCS/DVCS            & svn, perforce, mercurial, git \\ 
-                    & (github.com/voventus, bitbucket.com/voventus)
+VCS/DVCS            & perforce, svn, git
 \end{tabular}
 
 \end{rSection}
@@ -97,7 +101,7 @@ VCS/DVCS            & svn, perforce, mercurial, git \\
 \item Hi-Tech and impacting one on human being, designing hardware and software
 \item Physics (two completed univercity years), applied math, world economic
 \item Professional sports leagues of US (NHL, NFL, MLB), swimming (sports rank), cards games
-\item Foreign languages (English, Japanese, German, Russian - native), cooking, drawing, electronic music
+\item Foreign languages (English, Japanese, Russian - native), cooking, drawing, electronic music
 \end{itemize}
 
 \end{rSection}
