--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -7,8 +7,7 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Vladimir Ivanov}
-\address{tel.: +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \\ person@v-u-ivanov.ru \\ skype: v.u.ivanov}
-\address{Age: 25, man \\ birthplace: Vladivostok, Russia}
+\address{\em Age: 25 \\ person@v-u-ivanov.com}
 
 \begin{document}
 
@@ -18,18 +17,18 @@
 
 \begin{rSection}{Education}
 
-{\bf edX online learning initiative of Harvard University and MIT} \hfill {\em March 2012 - June 2012} \\
-Course "Circuits and Electronics 6.002x" was completed with grade A.
+%{\bf edX online learning initiative of Harvard University and MIT} \hfill {\em March 2012 - June 2012} \\
+%Course "Circuits and Electronics 6.002x" was completed with grade A.
 
-{\bf Far Eastern Federal Univercity (ex. FENU), Vadivostok} \hfill {\em August 2005 - June 2010} \\ 
-Expert. Information Systems \& Technologies Engineer. \\
+{\bf Far Eastern Federal Univercity (ex. FENU), Vladivostok} \hfill {August 2005 - June 2010} \\ 
+Master. Information Systems \& Technologies Engineer. \\
 Degree work was defended in the under-water robotics area.
 
-{\bf Secondary school 51 of Vladivostok} \hfill {\em September 2003  - June 2005} \\
+{\bf Secondary school 51 of Vladivostok} \hfill {September 2003 - June 2005} \\
 Complete medium education. \\
-Japanese Language certificate was obtained due to passing of the final exam.
+Obtained Japanese Language certificate due to passing of a final exam.
 
-{\bf Secondary school 51 of Vladivostok} \hfill {\em August 1995 - June 2003} \\
+{\bf Secondary school 51 of Vladivostok} \hfill {August 1995 - June 2003} \\
 Common education.
 
 \end{rSection}
@@ -42,22 +41,19 @@ Common education.
 
 \begin{rSubsection}{Rhonda Software, Ltd.}{October 2012 - present}{Embedded Software Engineer}{Vladivostok, RUS}
 \item Cambridge Silicon Radio (CSR) plc contractor.
-\item Distributed designing and supporting of the embedded software for the digital still cameras and mobile driver recorders based on the COACH system on a chip.
-\item Support offices are located in the USA, Israel, Taiwan, Japan, Korea, China.
-\item Team in the Russia consist of over than 80 members including developers and QA engineers.
-\item Main customers: Ability, Garmin, Nikon, Panasonic, Pentax, Samsung, Sony.
-\item Supported peripheral domain: optic sensors, file systems, displays, communication protocols, PC-side applied software.
-\item Improved processing performance of the user interface images for the customer projects.
+\item Distributed designing and supporting of an embedded software for a digital still cameras and mobile driver recorders based on the COACH system on a chip.
+\item Support offices are located in a number of countries: USA, Israel, Taiwan, Japan, Korea, China.
+\item Team in the Russia consist of over than 80 members including managers, developers and QA engineers.
+\item Main customers: Ability Enterprise, Garmin, Nikon, Panasonic, Pentax, Samsung, Sony.
+\item Supported peripheral domain: optic sensors, solid state storages, displays, communication protocols, PC side applied software.
+\item Improved processing performance of an user interface images for a customer projects.
 \end{rSubsection}
 
 \begin{rSubsection}{Spider Pacific, Ltd.}{October 2010 - October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
-\item Mechanical-less manipulator was designed as part of hardware/software system. As element base was used 
-integrated circuits of Atmel, Freescale, Analog Devices and Murata companies. Project was frozen at model stage by director.
-\item Valve tubes amplifier for PC sound cards was designed and manufactured. Complete circuit schematic was 
-used. Project is being at case designing stage.
-\item "Power over Ethernet" injector was designed and manufactured. Physical layer of IEEE 802.3af standart was 
-implemented (passive class B). Cisco Systems equipment is being used as a prototype. Implementation with entire 
-standart support is being at designing stage.
+\item Startup for a development of an applied hardware.
+\item Designed maket of a mechanical-less manipulator as part of a project management software system.
+\item Designed and manufactured prototype of a valve tubes amplifier for a PC sound cards.
+\item Designed and manufactured "Power over Ethernet" injector. Implemented physical layer of an IEEE 802.3af standart. The product was used in a number of a network projects.
 \end{rSubsection}
 
 \end{rSection}
@@ -69,24 +65,9 @@ standart support is being at designing stage.
 \begin{rSection}{Technical Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-CAD                 & Sprint Layout, sPlan, Eagle, Altium Designer \\
-Compilers/Tools     & gcc, avr-gcc, javac, gdb, make, avrdude, maxima \\
-Computer Networks   & OSI pattern, main network protocols, SOHO active communication \\
-                    & equipment, network mounting \\
-Computer Science    & foundation of computer architecture, microprocessor systems and \\
-                    & security techniques \\
-Electronics         & designing, routing and manufacturing both digital, analog and valve \\
-                    & tubes circuits, USB, UART/RS-232, 1-wire, SPI, I2C, CAN, JTAG \\
-Hand-Skills         & electrical equipment (multimeter, oscilloscope, logic and spectrum \\
-                    & analyzers), soldering (iron, airflow, microwave), lather and milling \\
-                    & works (Proxxon equipment, Germany), hardware programmers \\
-Operating Systems   & Windows, GNU/Linux (Ubuntu as main working system, Debian, \\
-                    & openSUSE, Fedora), VirtualBox as base of virtualization \\
-Prog. Languages     & assembler (x86, AVR), plain C, Wiring, Bash \\
-RTOS                & ThreadX, free-RTOS \\
-Text Processing/IDE & Sublime Text (own syntax definition for AVR assembler), Emacs, \\
-                    & LaTeX, Eclipse, AVR Studio, CVAVR, regexps \\
-VCS/DVCS            & perforce, svn, git
+Development & C/C++, Python, Perl, multithread programming, version control, issue tracking \\
+Debugging   & logs analyzing, in circuit emulation, electrical equipment usage \\
+Electronics & digital/analog/valve curcuits, schematic routing and assembling \\
 \end{tabular}
 
 \end{rSection}
@@ -98,10 +79,10 @@ VCS/DVCS            & perforce, svn, git
 \begin{rSection}{Hobby and Interests}
 
 \begin{itemize}
-\item Hi-Tech and impacting one on human being, designing hardware and software
+\item Hi-Tech and impacting one on a human being, designing hardware and software
 \item Physics (two completed univercity years), applied math, world economic
-\item Professional sports leagues of US (NHL, NFL, MLB), swimming (sports rank), cards games
-\item Foreign languages (English, Japanese, Russian - native), cooking, drawing, electronic music
+\item Professional sports leagues (NHL, NFL, MLB), swimming (sports rank)
+\item Foreign languages (English, Japanese, Russian - native), cooking, electronic music
 \end{itemize}
 
 \end{rSection}
