--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -8,7 +8,8 @@
 % \pagenumbering{arabic}
 
 \name{Vladimir Ivanov}
-\address{\Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \ \ \Letter \ person@v-u-ivanov.com }
+\address{\em Vladivostok, Maritime Province, Russia}
+\address{\Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \ \ \Letter \ person@v-u-ivanov.com}
 
 \begin{document}
 
@@ -17,7 +18,7 @@
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Summary}
-Practical engineer with a focus on the EECS. The main purpose of the professional activity is create a useful things, solve a complex technical problems and bring a case to the end.
+Practical engineer with a focus on the EECS. The main purpose of the professional activity is create a useful things, solve a complex technical problems and bring a case to the end. No blocking problems to work outside the current location.
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -27,15 +28,15 @@ Practical engineer with a focus on the EECS. The main purpose of the professiona
 \begin{rSection}{Education}
 
 {\bf Far Eastern State Univercity, Vladivostok} \hfill {August 2005 -- June 2010} \\ 
-M.S. Department of General Physics and Electrical Engineering. \\
+M.S. Departments of General Physics and Electronics. \\
 Degree work was defended in the underwater robotics area. \\
 GPA: 3.63 out of 4.
 
 {\bf Secondary school 51, Vladivostok} \hfill {September 2003 -- June 2005} \\
-Secondary education. In-depth study of the Japanese language.
+Secondary education. In-depth study of the Japanese Language.
 
 {\bf Secondary school 51, Vladivostok} \hfill {September 1995 -- June 2003} \\
-General education. In-depth study of the Japanese language.
+General education. In-depth study of the Japanese Language.
 
 \end{rSection}
 
@@ -45,10 +46,10 @@ General education. In-depth study of the Japanese language.
 
 \begin{rSection}{Sertificates}
 
-\begin{itemize}
+\begin{rItemize}
 \item Three-month course "Circuits and Electronics 6.002x". Earned a maximum passing grade. The online learning initiative of Harvard University and MIT, June 2012.
-\item Course of the Japanese language. The course of 1150 hours and a number of a final exams. Secondary school 51 of Vladivostok, 1995 -- 2005.
-\end{itemize}
+\item Course of the Japanese Language. The course of 1150 hours and a number of a final exams. Secondary school 51 of Vladivostok, 1995 -- 2005.
+\end{rItemize}
 
 \end{rSection}
 
@@ -58,9 +59,9 @@ General education. In-depth study of the Japanese language.
 
 \begin{rSection}{Publications}
 
-\begin{itemize}
+\begin{rItemize}
 \item Ivanov V. "The diagnostic system of a motor drive module for a underwater robot". Master thesis. Institute of Marine Technology Problems FEB RAS, Vladivostok, June 2010.
-\end{itemize}
+\end{rItemize}
 
 \end{rSection}
 
@@ -70,19 +71,22 @@ General education. In-depth study of the Japanese language.
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Rhonda Software, Ltd.}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
+\begin{rCompany}{Rhonda Software, Ltd.}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
 \item Cambridge Silicon Radio plc contractor.
-\item Distributed designing and supporting of an embedded software for a digital still cameras and mobile driver recorders based on the COACH (Camera On A Chip) SoC. Support field offices are located in a number of countries: China, Israel, Japan, Korea, Russia, USA.
-\item Solving of a time-critical firmware issues under a customer's pressure. Designing and implementing of a new requested features, rework of an existing API.
-\item Supported peripheral domain: optic sensors, solid state storages, displays, communication protocols, PC-side applied software. Improved processing performance of an user interface images for a customer projects.
-\end{rSubsection}
+\item Distributed designing and supporting of an embedded software for a digital still cameras and mobile driver recorders based on the COACH (Camera On A Chip) SoC.
+\item Support field offices are located in a number of countries: China, Israel, Japan, Korea, Russia, USA.
+\item Solving of a time-critical firmware issues under a customer's pressure.
+\item Designing and implementing of a new requested features, rework of an existing API.
+\item Supported peripheral domain: optic sensors, solid state storages, displays, communication protocols, PC-side applied software.
+\item Improved processing performance of an user interface images for a customer projects.
+\end{rCompany}
 
-\begin{rSubsection}{Spider Pacific, Ltd.}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
+\begin{rCompany}{Spider Pacific, Ltd.}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
 \item Startup for a development of an applied hardware.
 \item Designed maket of a mechanical-less manipulator as part of a project management software system.
 \item Designed and manufactured prototype of a valve tubes amplifier for a PC sound cards.
-\item Designed and manufactured "Power over Ethernet" injector. Implemented physical layer of an IEEE 802.3af standart. The product was used in a number of a network projects.
-\end{rSubsection}
+\item Designed and manufactured "Power over Ethernet" injector. Implemented physical layer of an IEEE 802.3af standart. The product was used in a number of a computer network projects.
+\end{rCompany}
 
 \end{rSection}
 
@@ -96,10 +100,10 @@ General education. In-depth study of the Japanese language.
 Development & embedded C/C++, automation (Python and Perl), multithread and event-driven \\
             & design, device drivers, version control, code review, issue tracking \\
 Debugging   & logs analyzing, in-circuit emulation, electrical equipment usage, remote debugging \\
-Electronics & digital/analog/valve curcuits design, selection of an electronic components, \\
+Electronics & digital/analog/tube curcuits design, selection of an electronic components, \\
             & routing and assembling of a PCB \\
 Languages   & English, \begin{CJK}{UTF8}{min}日本語\end{CJK}, Russian (native) \\
-Misc        & lathe and milling works
+Misc        & bring up of a computer networks, lathe and milling works
 \end{tabular}
 
 \end{rSection}
@@ -110,7 +114,7 @@ Misc        & lathe and milling works
 
 \begin{rSection}{Keywords}
 
-AVR, C, C++, CAN, Code Collaborator, Eagle, Eclipse, eTraxis, FileX, GCC, Gerber, Git, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, MCS-51, MIPS, optic sensor, Perforce, Perl, PHP, PIC, Proxxon, Python, Redmine, RS-232, SPI, SPICE, Spider Project, SQL, SVN, \TeX, ThreadX, UART, UML, Visual Studio, zlib
+AVR, C, C++, CAN, Code Collaborator, Eagle CAD, Eclipse, eTraxis, FileX, GCC, Gerber, Git, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, MCS-51, MIPS, optic sensor, Perforce, Perl, PHP, PIC, Proxxon, Python, Redmine, RS-232, SPI, SPICE, Spider Project, SQL, SVN, \TeX, ThreadX, UART, UML, Visual Studio, zlib
 
 \end{rSection}
 
@@ -120,10 +124,13 @@ AVR, C, C++, CAN, Code Collaborator, Eagle, Eclipse, eTraxis, FileX, GCC, Gerber
 
 \begin{rSection}{Hobby and Interests}
 
-$\cdot$ Hi-Tech and impacting one on a human being, designing hardware and software \\
-$\cdot$ Physics (two completed univercity years), applied math, world economic \\
-$\cdot$ Professional sports leagues (NHL, NFL, MLB),  swimming (sports category) \\
-$\cdot$ Cooking, electronic music
+\begin{rHobby}
+\item Hi-Tech and impacting one on a human being, designing hardware and software
+\item Physics (two completed univercity years), applied math, world economic
+\item Professional sports leagues: NHL, NFL, MLB
+\item Swimming (sports category), marine multiathlon (sports category)
+\item Cooking, electronic music
+\end{rHobby}
 
 \end{rSection}
 
