--- a/template.cls
+++ b/template.cls
@@ -107,7 +107,7 @@
 %	WORK EXPERIENCE FORMATTING
 %----------------------------------------------------------------------------------------
 
-\newenvironment{rSubsection}[4] % 4 input arguments - company name, year(s) employed, job title and location
+\newenvironment{rCompany}[4] % 4 input arguments - company name, year(s) employed, job title and location
 {
     {\bf #1} \hfill {#2} % Bold company name and date on the right
     \ifthenelse{\equal{#3}{}} % If the third argument is not specified, don't print the job title and location line
@@ -116,6 +116,28 @@
     \smallskip
     \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
     \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
+}
+{
+    \end{list}
+    \vspace{0.5em} % Some space after the list of bullet points
+}
+
+\newenvironment{rHobby}
+{
+    \medskip
+    \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
+    \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
+}
+{
+    \end{list}
+    \vspace{0.5em} % Some space after the list of bullet points
+}
+
+\newenvironment{rItemize}
+{
+    \medskip
+    \begin{list}{\textbullet}{\leftmargin=1em} % \cdot used for bullets, no indentation
+    \itemsep 0em \vspace{-0.5em} % Compress items in list together for aesthetics
 }
 {
     \end{list}
