--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -9,7 +9,7 @@
 
 \name{Vladimir Ivanov}
 \address{\em Vladivostok, Maritime Province, Russia}
-\address{\Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \ \ \Letter \ person@v-u-ivanov.com}
+\address{\Mobilefone \ +7 (924) 320$\cdot$09$\cdot$34 \ \textbar \ \ \Letter \ person@v-u-ivanov.com}
 
 \begin{document}
 
@@ -18,7 +18,7 @@
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Summary}
-Practical engineer with a focus on the EECS. The main purpose of the professional activity is create a useful things, solve a complex technical problems and bring a case to the end. No blocking problems to work outside the current location.
+Practical engineer with a focus on the EECS. 3+ years of experience in designing of embedded systems. I have built own experience through hardware and software co-design. Strong skills in electrical engineering, computer science and research area. Looking for new career opportunities in a team of professionals with using of progressive technologies and tools. Main areas of interest are consumer electronics, robotics, automotive and game industry, medical equipment, telecommunication and networks. No blocking problems to work outside the current location.
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -27,16 +27,18 @@ Practical engineer with a focus on the EECS. The main purpose of the professiona
 
 \begin{rSection}{Education}
 
-{\bf Far Eastern State Univercity, Vladivostok} \hfill {August 2005 -- June 2010} \\ 
+{\bf Far Eastern State University, Vladivostok} \hfill {August 2005 -- June 2010} \\ 
 M.S. Departments of General Physics and Electronics. \\
 Degree work was defended in the underwater robotics area. \\
 GPA: 3.63 out of 4.
 
 {\bf Secondary school 51, Vladivostok} \hfill {September 2003 -- June 2005} \\
-Secondary education. In-depth study of the Japanese Language.
+Secondary education. \\
+In-depth study of Japanese Language.
 
 {\bf Secondary school 51, Vladivostok} \hfill {September 1995 -- June 2003} \\
-General education. In-depth study of the Japanese Language.
+General education. \\
+In-depth study of Japanese Language.
 
 \end{rSection}
 
@@ -47,8 +49,12 @@ General education. In-depth study of the Japanese Language.
 \begin{rSection}{Sertificates}
 
 \begin{rItemize}
-\item Three-month course "Circuits and Electronics 6.002x". Earned a maximum passing grade. The online learning initiative of Harvard University and MIT, June 2012.
-\item Course of the Japanese Language. The course of 1150 hours and a number of a final exams. Secondary school 51 of Vladivostok, 1995 -- 2005.
+\item Two-month course "6.00.1x: Introduction to CS and Programming".  Excellent passing grade. \\
+The online learning initiative of Harvard University and MIT, December 2013.
+\item Three-month course "6.002x: Circuits and Electronics". Maximum passing grade. \\
+The online learning initiative of Harvard University and MIT, June 2012.
+\item Course of Japanese Language. The course of 1150 hours and a number of final exams. \\
+Secondary school 51 of Vladivostok, 1995 -- 2005.
 \end{rItemize}
 
 \end{rSection}
@@ -71,21 +77,21 @@ General education. In-depth study of the Japanese Language.
 
 \begin{rSection}{Experience}
 
-\begin{rCompany}{Rhonda Software, Ltd.}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
-\item Cambridge Silicon Radio plc contractor.
-\item Distributed designing and supporting of an embedded software for a digital still cameras and mobile driver recorders based on the COACH (Camera On A Chip) SoC.
-\item Support field offices are located in a number of countries: China, Israel, Japan, Korea, Russia, USA.
-\item Solving of a time-critical firmware issues under a customer's pressure.
-\item Designing and implementing of a new requested features, rework of an existing API.
-\item Supported peripheral domain: optic sensors, solid state storages, displays, communication protocols, PC-side applied software.
-\item Improved processing performance of an user interface images for a customer projects.
+\begin{rCompany}{Rhonda Software Ltd.}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
+\item CSR plc. contractor, work on the COACH imaging SoC/DSP platform.
+\item Distributed supporting of the embedded software for ODM/OEM customers: main manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
+\item Support offices are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
+\item Supported peripheral domain: on-chip peripheral, optic sensors, solid state storages, displays, PC-side applied software, various peripheral-specific firmware algorithms.
+\item Solving of time-critical project issues under a customer's pressure: resolved a number of various "MP block" software and hardware problems.
+\item Designing and implementing of new requested features, rework of the API: improved processing performance of UI images for customer's projects.
+\item Business trip to CSR Israel (former Zoran Corp.): MATAM, Advanced Technology Center, Haifa.
 \end{rCompany}
 
-\begin{rCompany}{Spider Pacific, Ltd.}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
+\begin{rCompany}{Spider Pacific Ltd.}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
 \item Startup for a development of an applied hardware.
-\item Designed maket of a mechanical-less manipulator as part of a project management software system.
-\item Designed and manufactured prototype of a valve tubes amplifier for a PC sound cards.
-\item Designed and manufactured "Power over Ethernet" injector. Implemented physical layer of an IEEE 802.3af standart. The product was used in a number of a computer network projects.
+\item Designed maket of the mechanical-less manipulator as part of the project management software system.
+\item Designed and manufactured prototype of the valve tubes amplifier for a PC sound cards.
+\item Designed and manufactured "Power over Ethernet" injector. Implemented physical layer of the IEEE 802.3af standart. The product was used in a number of computer network projects.
 \end{rCompany}
 
 \end{rSection}
@@ -97,13 +103,18 @@ General education. In-depth study of the Japanese Language.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Development & embedded C/C++, automation (Python and Perl), multithread and event-driven \\
-            & design, device drivers, version control, code review, issue tracking \\
-Debugging   & logs analyzing, in-circuit emulation, electrical equipment usage, remote debugging \\
-Electronics & digital/analog/tube curcuits design, selection of an electronic components, \\
-            & routing and assembling of a PCB \\
-Languages   & English, \begin{CJK}{UTF8}{min}日本語\end{CJK}, Russian (native) \\
-Misc        & bring up of a computer networks, lathe and milling works
+Development & embedded C, C++, automation (Python and Perl), multithreading, interrupt- \\
+            & and event-driven design, device drivers, version control, code review, issue \\
+            &  tracking, code documentation \\
+Debugging   & logs analyzing, in-circuit emulation, remote debugging, lab equipment usage \\
+Electronics & digital/analog/tube circuits design, electrical (KCL, KVL, etc.) and thermal \\
+            & calculations, selection of electronic components, routing and assembling of \\
+            & prototype PCBs (hole-mount and SMD) \\
+Languages   & English (professional working proficiency) \\
+            & \begin{CJK}{UTF8}{min}日本語\end{CJK} (limited working proficiency) \\
+            & Russian (native) \\
+Misc        & foundations of project management, lathe and milling works, bring up of \\
+            & computer networks, a bit experience in transferring of knowledges to students
 \end{tabular}
 
 \end{rSection}
@@ -114,7 +125,7 @@ Misc        & bring up of a computer networks, lathe and milling works
 
 \begin{rSection}{Keywords}
 
-AVR, C, C++, CAN, Code Collaborator, Eagle CAD, Eclipse, eTraxis, FileX, GCC, Gerber, Git, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, MCS-51, MIPS, optic sensor, Perforce, Perl, PHP, PIC, Proxxon, Python, Redmine, RS-232, SPI, SPICE, Spider Project, SQL, SVN, \TeX, ThreadX, UART, UML, Visual Studio, zlib
+1-Wire, ADC, Atomthreads, AVR, Bash, BSP, C, C++, CAN, CCD/CMOS optic sensor, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Maxima, MCS-51, MIPS, OOP, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Source Insight, SQL, SVN, \TeX, ThreadX, UART, UML, Visual Studio, Windows, zlib
 
 \end{rSection}
 
@@ -126,7 +137,7 @@ AVR, C, C++, CAN, Code Collaborator, Eagle CAD, Eclipse, eTraxis, FileX, GCC, Ge
 
 \begin{rHobby}
 \item Hi-Tech and impacting one on a human being, designing hardware and software
-\item Physics (two completed univercity years), applied math, world economic
+\item Physics (two completed university years), applied math, world economic
 \item Professional sports leagues: NHL, NFL, MLB
 \item Swimming (sports category), marine multiathlon (sports category)
 \item Cooking, electronic music
