Update for KEYWORDS section

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -125,7 +125,7 @@ Misc        & foundations of project management, lathe and milling works, bring 
 
 \begin{rSection}{Keywords}
 
-1-Wire, ADC, Atomthreads, AVR, Bash, BSP, C, C++, CAN, CCD/CMOS optic sensor, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Maxima, MCS-51, MIPS, OOP, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Source Insight, SQL, SVN, \TeX, ThreadX, UART, UML, Visual Studio, Windows, zlib
+1-Wire, ADC, Atomthreads, AVR, Bash, BSP, C, C++, CAN, CCD/CMOS optic sensor, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Maxima, MCS-51, MIPS, OOP, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Source Insight, SQL, SVN, \TeX, ThreadX, UART, UML, V8, Visual Studio, Windows, zlib
 
 \end{rSection}
 
