Hmm, smth good...

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -78,13 +78,12 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \begin{rSection}{Experience}
 
 \begin{rCompany}{Rhonda Software Ltd.}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
-\item CSR plc. contractor, work on the COACH imaging SoC/DSP platform.
-\item Distributed supporting of the embedded software for ODM/OEM customers: main manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
+\item CSR plc. contractor. Work on the COACH\texttrademark \ SoC \textit{imaging} platform.
+\item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
 \item Support offices are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
-\item Supported peripheral domain: on-chip peripheral, optic sensors, solid state storages, displays, PC-side applied software, various peripheral-specific firmware algorithms.
-\item Solving of time-critical project issues under a customer's pressure: resolved a number of various "MP block" software and hardware problems.
-\item Designing and implementing of new requested features, rework of the API: improved processing performance of UI images for customer's projects.
-\item Business trip to CSR Israel (former Zoran Corp.): MATAM, Advanced Technology Center, Haifa.
+\item Solving of time-critical project issues under a customer's pressure. Resolved a number of various "MP block" software and hardware problems.
+\item Supported \textit{peripheral} domain. CMOS/CCD optic sensors: drivers bug-fixing, implementation of new capabilities, support for smear correction driver owners. NVM storages: filesystem bug-fixing, NAND drivers timing-optimizations. Display claster: problems related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: bug-fixing for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool. Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller. Improved processing performance of UI images for customer's projects.
+\item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa.
 \end{rCompany}
 
 \begin{rCompany}{Spider Pacific Ltd.}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
@@ -103,18 +102,32 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Development & embedded C, C++, automation (Python and Perl), multithreading, interrupt- \\
-            & and event-driven design, device drivers, version control, code review, issue \\
-            &  tracking, code documentation \\
-Debugging   & logs analyzing, in-circuit emulation, remote debugging, lab equipment usage \\
-Electronics & digital/analog/tube circuits design, electrical (KCL, KVL, etc.) and thermal \\
-            & calculations, selection of electronic components, routing and assembling of \\
-            & prototype PCBs (hole-mount and SMD) \\
-Languages   & English (professional working proficiency) \\
-            & \begin{CJK}{UTF8}{min}日本語\end{CJK} (limited working proficiency) \\
-            & Russian (native) \\
-Misc        & foundations of project management, lathe and milling works, bring up of \\
-            & computer networks, a bit experience in transferring of knowledges to students
+SW-Development  & Embedded C and C++: source code mixing, a bit of STL. Interrupt- and \\
+                & event-driven design. Development process automation: Python and Perl. \\
+                & Build system: Make and WAF. Multi-threading; Atomthreads, ThreadX. \\
+                & Device drivers. Version control: Perforce, SVN, Git. Code review: Review \\
+                & Board, Code Collaborator. Issue tracking: JIRA, Redmine, eTraxis. \\
+                & Code documentation: Doxygen. Continuous integration: QuickBuild.\\ \\
+
+HW-Development  & Digital/analog/tube circuits design and analysis: electrical and thermal \\
+                & calculations, circuits emulation. Selection of electronic components: \\
+                & excellent guided both in through-hole and surface-mount packages. \\
+                & Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, \\
+                & a bit of Altium Designer. Excellent skills in manual soldering. \\ \\
+
+Debugging       & Crash-logs analyzing. Remote debugging: customer support via e-mail \\
+                & threads and Skype. In-circuit emulation: JTAG. Lab-equipment usage: \\ 
+                & digital power supply, multimeter, analog/digital oscilloscope, signal \\
+                & generator, autotransformator. \\ \\
+
+Languages       & English: professional working proficiency \\
+                & \begin{CJK}{UTF8}{min}日本語\end{CJK}: elementary proficiency \\
+                & Russian: native \\ \\
+
+Misc            & Foundations of project management: Spider Project. Lathe and milling \\
+                & works: Proxxon equipment. Bring up of computer networks: OSI. A bit \\
+                & experience in transferring of knowledges to students: electronics and \\
+                & programming foundations.
 \end{tabular}
 
 \end{rSection}
@@ -125,7 +138,7 @@ Misc        & foundations of project management, lathe and milling works, bring 
 
 \begin{rSection}{Keywords}
 
-1-Wire, ADC, Atomthreads, AVR, Bash, BSP, C, C++, CAN, CCD/CMOS optic sensor, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Maxima, MCS-51, MIPS, OOP, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Source Insight, SQL, SVN, \TeX, ThreadX, UART, UML, V8, Visual Studio, Windows, zlib
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, Bash, BSP, C, C++, CAN, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Make, Maxima, MCS-51, MIPS, OOP, optic sensor, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Review Board, Source Insight, Sprint Layout, SQL, STL, SVN, \TeX, ThreadX, UART, UML, USB, V8, Visual Studio, WAF, Windows, zlib
 
 \end{rSection}
 
